final setup (hopefully)